worker-cluster/resources/default/app-stack/test-stack-api/instance-configure/5058f/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    app: test-stack-api
    environment: dev
