worker-cluster/resources/default/app-stack/test-stack-api/instance-configure/5058f/07-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-stack-api-api
  namespace: default
  labels:
    app: test-stack-api-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: test-stack-api-api
